[gd_scene load_steps=5 format=3 uid="uid://bjihdf8whv0j1"]

[ext_resource type="Script" uid="uid://b3jgg1ytn7pn4" path="res://Scenes/Pistol/weapon.gd" id="1_h5nmj"]
[ext_resource type="AudioStream" uid="uid://x2wn0ibpk515" path="res://assets/Sdounds/Pistols/0001_desert_eagle.mp3" id="2_sebvg"]
[ext_resource type="PackedScene" uid="uid://douadfovuuo6b" path="res://Scenes/Bullet/bullet.tscn" id="2_x1djw"]
[ext_resource type="Texture2D" uid="uid://mvm0gk4hngc6" path="res://assets/Top_Down_Survivor/Survivor Spine/images/pistol.png" id="3_x1djw"]

[node name="Pistol" type="Node2D"]
script = ExtResource("1_h5nmj")
Bullet_Scene = ExtResource("2_x1djw")

[node name="pistol_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_sebvg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_x1djw")

[node name="End_Of_Gun" type="Node2D" parent="."]
position = Vector2(24, 1)

[node name="weapon_cooldown" type="Timer" parent="."]
one_shot = true
